[package]
name = "snmp2"
version = "0.3.2"
edition = "2021"
description = "SNMP client library"
authors = ["Serhij S. <div@altertech.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/roboplc/snmp2"
readme = "README.md"
keywords = ["networking", "snmp", "monitoring"]

[package.metadata.docs.rs]
features = ["full"]

[package.metadata.playground]
features = []

[dependencies]
asn1-rs = "0.6"
der-parser = "9"
snmptools = { version = "^0.1.2", optional = true }

[features]
mibs = ["dep:snmptools"]
full = ["mibs"]
