[package]
name = "snmp2"
version = "0.3.4"
edition = "2021"
description = "SNMP client library"
authors = ["Serhij S. <div@altertech.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/roboplc/snmp2"
readme = "README.md"
keywords = ["networking", "snmp", "monitoring"]

[package.metadata.docs.rs]
features = ["full"]

[package.metadata.playground]
features = []

[dependencies]
asn1-rs = "0.6"
snmptools = { version = "^0.1.2", optional = true }
tokio = { version = "1.36", features = ["net"], optional = true }

[dev-dependencies]
tokio = { version = "=1.36" }

[features]
mibs = ["dep:snmptools"]
tokio = ["dep:tokio"]
full = ["mibs", "tokio"]
